[BE]RovinskyiYurii_CorrectProjectStructure_RepositorySetup

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\Repositories\" />
+    <Folder Include="Interfaces\Services\" />
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
 </Project>
