--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Interfaces\Repositories\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.5" />
+  </ItemGroup>
+
 </Project>
