add-dev-conn-string

--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default" : "Server=localhost,1433;Database=AuthDb;User=sa;Password=pa55w0rd!"
+    "Default" : "Server=localhost,1433;Database=VetClinic;User=sa;Password=pa55w0rd!"
   },
   "AllowedHosts": "*"
 }
