Added fluent Api and changed (I)ProcedureService to async

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
     <ProjectReference Include="..\WebApi\WebApi.csproj" />
     <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
