Added workable version

--- a/Host/appsettings.json
+++ b/Host/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(LocalDb)\\MSSQLLocalDB;database=VetClinic;trusted_connection=yes;"
+    "DefaultConnection": "Server=.;Database=VetClinic;Trusted_Connection=True"
   }
 }
