Setuped identity server url

--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -2,11 +2,12 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore": "Warning" 
     }
   },
   "ConnectionStrings": {
-    "Default" : "Server=localhost,1433;Database=VetClinic;User=sa;Password=pa55w0rd!"
+    "Default" : "your connection string"
   },
   "AllowedHosts": "*"
 }
