--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=localhost,1433;Database=VetClinic;User=sa;Password=pa55w0rd!"
+    "Default" : "Server=localhost,1433;Database=VetClinic;User=sa;Password=pa55w0rd!"
   },
   "AllowedHosts": "*"
 }
