--- a/Host/Nlog.config
+++ b/Host/Nlog.config
@@ -9,7 +9,7 @@
 
 	<targets>
 		<target xsi:type="File" name="VetClinicLogger" fileName="${basedir}/logs/${shortdate}.log"
-					layout="${longdate} ${uppercase:${level}} ${message}" />
+					layout="${longdate} |${uppercase:${level}}| ${message}" />
 	</targets>
 
 	<rules>
