--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -1,10 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.EntityFrameworkCore": "Warning" 
-    }
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File"],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {"theme" : "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console"}
+      },
+      {
+        "Name": "File",
+        "Args": 
+        { 
+          "path": "../logs/IS_.log",
+          "rollingInterval" : "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "ConnectionStrings": {
     "Default" : "Server=localhost,1433;Database=VetClinic;User=sa;Password=pa55w0rd!"
