--- a/.gitignore
+++ b/.gitignore
@@ -606,3 +606,4 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore,visualstudio,rider
+/.sonarqube/conf
