Created unittests for succesfful cases

--- a/Tests/WebApi.Test/WebApi.Test.csproj
+++ b/Tests/WebApi.Test/WebApi.Test.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Core\Core.csproj" />
     <ProjectReference Include="..\..\WebApi\WebApi.csproj" />
   </ItemGroup>
 
