Changed default profile picture logic

--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Assets\Images\" />
+  </ItemGroup>
+
 </Project>
