--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="NLog" Version="5.0.0" />
+    <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="20.2.0.39" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
   </ItemGroup>
 
